[package]
name = "c-img"
version = "0.1.0"
authors = ["waoooon <waoooon@sahagyo.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
hyper = "0.13"
tokio = { version = "0.2", features = ["full"] }
futures-core = { version = "0.3", default-features = false }
futures-channel = "0.3"
futures-util = { version = "0.3", default-features = false }
image = "0.23"

[dependencies.redis]
version = "*"
