[package]
name = "tofu-ae"
version = "0.1.0"
authors = ["waoooon <waoooon@sahagyo.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
hyper = "0.13"
futures-core = { version = "0.3", default-features = false }
futures-channel = "0.3"
futures-util = { version = "0.3", default-features = false }
tokio-util = { version = "0.3" }
tokio = { version = "0.2", features = ["macros", "time", "rt-core", "sync"] }
image = "0.23"

[dependencies.redis]
version = "*"
